--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "line-counter"
-version = "1.0.5"
+version = "1.0.6"
 edition = "2021"
 
 [dependencies]
@@ -8,4 +8,4 @@ clap = { version = "4.4.13", features = ["derive"] }
 walkdir = "2.4.0"
 indicatif = { version = "*", features = ["rayon"] }
 color-print = "0.3.5"
-self_update = "0.39.0"
+self_update = { version = "0.39.0", features = ["archive-tar", "archive-zip", "compression-flate2"] }
