--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,8 @@ jobs:
           #   os: ubuntu-latest
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-20.04
+          - target: x86_64-unknown-linux-musl
+            os: ubuntu-20.04
           - target: x86_64-apple-darwin
             os: macos-latest
           - target: universal-apple-darwin
