--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,8 +27,6 @@ jobs:
         include:
           - target: aarch64-apple-darwin
             os: macos-latest
-          # - target: x86_64-unknown-linux-gnu
-          #   os: ubuntu-latest
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-20.04
           - target: x86_64-unknown-linux-musl
@@ -52,7 +50,7 @@ jobs:
         run: sudo apt-get update --yes && sudo apt-get install --yes musl-tools
         if: contains(matrix.target, 'musl')
       - name: Install tools
-        run: sudo apt-get update --yes && sudo apt-get install --yes libxi-dev libx11-dev libxcb1 libxrandr2 libdbus-1-3 libxtst-dev
+        run: sudo apt-get update --yes && sudo apt-get install --yes libxi-dev libx11-dev libxcb1 libxrandr2 libdbus-1-3 libxtst-dev libssl-dev
         if: contains(matrix.os, 'ubuntu')
       - uses: taiki-e/upload-rust-binary-action@v1
         with:
